--- a/.github/workflows/octave.yml
+++ b/.github/workflows/octave.yml
@@ -4,9 +4,9 @@ name: Octave application
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
