--- a/.github/workflows/octave.yml
+++ b/.github/workflows/octave.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y octave
+        sudo apt-get install -y octave octave-dev
     - name: Run tests
       run: |
         octave --no-gui test_GVF.m
